[gd_scene load_steps=41 format=3 uid="uid://c1kuedvdjbjuh"]

[ext_resource type="Script" uid="uid://1p3s05k76pd8" path="res://Scripts/dice_manager.gd" id="1_2avr7"]
[ext_resource type="Texture2D" uid="uid://b3nrapvu0peh2" path="res://Images/Dice/greenBG.png" id="2_8ajpw"]
[ext_resource type="Texture2D" uid="uid://c18xag2vipr65" path="res://Images/Dice/dieRed_border1.png" id="3_52i40"]
[ext_resource type="Texture2D" uid="uid://kxwrcvn8cagg" path="res://Images/Dice/dieRed_border2.png" id="3_iv6xg"]
[ext_resource type="Script" uid="uid://ctbty302wxoo2" path="res://Scripts/area_2d_dice_1.gd" id="4_52i40"]
[ext_resource type="Script" uid="uid://ddemqjbrbo3jj" path="res://Scripts/area_2d_dice_2.gd" id="6_51dbu"]
[ext_resource type="Texture2D" uid="uid://bcg7uuh3bplcq" path="res://Images/Dice/dieRed_border5.png" id="6_t106f"]
[ext_resource type="Texture2D" uid="uid://crx6n0g70h404" path="res://Images/Dice/dieRed_border3.png" id="7_kctvb"]
[ext_resource type="Script" uid="uid://cojt4xxqxly21" path="res://Scripts/area_2d_dice_3.gd" id="8_52i40"]
[ext_resource type="Texture2D" uid="uid://gg8y38q1wp76" path="res://Images/Animations/a01.png" id="8_u51ea"]
[ext_resource type="Texture2D" uid="uid://b1snj6l87l08q" path="res://Images/Dice/dieRed_border4.png" id="9_0lvw8"]
[ext_resource type="Texture2D" uid="uid://71nnm14eo133" path="res://Images/Animations/a02.png" id="9_mbb5o"]
[ext_resource type="Texture2D" uid="uid://c3r7yb1o7y257" path="res://Images/Animations/a03.png" id="10_gy8us"]
[ext_resource type="Script" uid="uid://jc5uyq1ootuo" path="res://Scripts/area_2d_dice_4.gd" id="10_kctvb"]
[ext_resource type="Texture2D" uid="uid://bxee6g54xuk34" path="res://Images/Dice/dieRed_border6.png" id="11_3n6wd"]
[ext_resource type="Texture2D" uid="uid://cyh1vh6who6s0" path="res://Images/Animations/a04.png" id="11_7v8n1"]
[ext_resource type="Texture2D" uid="uid://dmgoqssgfjw2v" path="res://Images/Animations/a06.png" id="12_0iit3"]
[ext_resource type="Script" uid="uid://cl1y0nd0vhdmo" path="res://Scripts/area_2d_dice_5.gd" id="12_0lvw8"]
[ext_resource type="Texture2D" uid="uid://b23cpceem684y" path="res://Images/Animations/a08.png" id="13_fkaf6"]
[ext_resource type="Script" uid="uid://ci5g6wab363dk" path="res://Scripts/area_2d_dice_6.gd" id="14_3n6wd"]
[ext_resource type="Texture2D" uid="uid://nrkiw8t1lsrw" path="res://Images/Animations/a09.png" id="14_7slax"]
[ext_resource type="Texture2D" uid="uid://c24efng4wq0nk" path="res://Images/Animations/recoger_dados/recoger-dados01.png" id="15_1m5i2"]
[ext_resource type="Texture2D" uid="uid://ef6orp30nkbb" path="res://Images/Animations/recoger_dados/recoger-dados02.png" id="16_8r8jg"]
[ext_resource type="Texture2D" uid="uid://71d7iu6c078s" path="res://Images/Animations/recoger_dados/recoger-dados03.png" id="17_qj0kx"]
[ext_resource type="Texture2D" uid="uid://dgim4kfficcvc" path="res://Images/Animations/recoger_dados/recoger-dados04.png" id="18_5nop2"]
[ext_resource type="Texture2D" uid="uid://b4thkkuou3s7d" path="res://Images/Animations/recoger_dados/recoger-dados05.png" id="19_r838k"]
[ext_resource type="Texture2D" uid="uid://d2l4468h74rat" path="res://Images/Animations/recoger_dados/recoger-dados06.png" id="20_mtp7x"]

[sub_resource type="GDScript" id="GDScript_do1ch"]
script/source = "extends Node
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8hc4g"]
size = Vector2(64.9309, 63.0366)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52i40"]
size = Vector2(65.4619, 63.5589)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kctvb"]
size = Vector2(61.1279, 59.5473)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0lvw8"]
size = Vector2(63.2978, 63.3221)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3n6wd"]
size = Vector2(61.6121, 62.2034)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rk1eq"]
size = Vector2(60.7878, 61.2894)

[sub_resource type="Animation" id="Animation_g8fwu"]
resource_name = "AgitarCubilete"
length = 0.300003
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_u51ea"), ExtResource("9_mbb5o"), ExtResource("10_gy8us"), ExtResource("11_7v8n1"), ExtResource("12_0iit3"), ExtResource("13_fkaf6"), ExtResource("14_7slax"), ExtResource("14_7slax")]
}

[sub_resource type="Animation" id="Animation_2x1oe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_u51ea")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iar8x"]
_data = {
&"AgitarCubilete": SubResource("Animation_g8fwu"),
&"RESET": SubResource("Animation_2x1oe")
}

[sub_resource type="Animation" id="Animation_xsw82"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_1m5i2")]
}

[sub_resource type="Animation" id="Animation_60iw4"]
resource_name = "recoger_dados"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.633333, 0.833333, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("15_1m5i2"), ExtResource("16_8r8jg"), ExtResource("17_qj0kx"), ExtResource("18_5nop2"), ExtResource("19_r838k"), ExtResource("20_mtp7x")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3px3"]
_data = {
&"RESET": SubResource("Animation_xsw82"),
&"recoger_dados": SubResource("Animation_60iw4")
}

[node name="DiceManager" type="Node2D"]
script = ExtResource("1_2avr7")

[node name="GreenShadowDice1" type="Sprite2D" parent="."]
visible = false
position = Vector2(130, 144)
rotation = 1.19775
texture = ExtResource("2_8ajpw")

[node name="GreenShadowDice2" type="Sprite2D" parent="."]
visible = false
position = Vector2(220, 214)
rotation = 1.2699
texture = ExtResource("2_8ajpw")

[node name="GreenShadowDice3" type="Sprite2D" parent="."]
visible = false
position = Vector2(271, 111)
rotation = 1.31314
texture = ExtResource("2_8ajpw")

[node name="GreenShadowDice4" type="Sprite2D" parent="."]
visible = false
position = Vector2(343, 219)
rotation = 1.94329
texture = ExtResource("2_8ajpw")

[node name="GreenShadowDice5" type="Sprite2D" parent="."]
visible = false
position = Vector2(397, 115)
rotation = 1.19935
texture = ExtResource("2_8ajpw")

[node name="GreenShadowDice6" type="Sprite2D" parent="."]
visible = false
position = Vector2(464, 219)
rotation = 0.59363
texture = ExtResource("2_8ajpw")

[node name="DiceSelectionScript" type="Node" parent="."]
script = SubResource("GDScript_do1ch")

[node name="Dice1" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(130, 145)
rotation = 1.19775
texture = ExtResource("3_52i40")

[node name="Area2DDice1" type="Area2D" parent="Dice1"]
position = Vector2(20.8135, -20.2272)
rotation = 0.0207991
script = ExtResource("4_52i40")

[node name="CollisionShape2DDice1" type="CollisionShape2D" parent="Dice1/Area2DDice1"]
z_index = 1
position = Vector2(-21.0232, 20.1528)
shape = SubResource("RectangleShape2D_8hc4g")

[node name="Dice2" type="Sprite2D" parent="."]
visible = false
position = Vector2(219, 213)
rotation = -0.292297
texture = ExtResource("3_iv6xg")

[node name="Area2DDice2" type="Area2D" parent="Dice2"]
script = ExtResource("6_51dbu")

[node name="CollisionShape2DDice2" type="CollisionShape2D" parent="Dice2/Area2DDice2"]
position = Vector2(-7.15256e-06, 2.14577e-06)
rotation = 0.00435746
shape = SubResource("RectangleShape2D_52i40")

[node name="Dice3" type="Sprite2D" parent="."]
visible = false
position = Vector2(269, 110)
rotation = -0.25578
texture = ExtResource("7_kctvb")

[node name="Area2DDice3" type="Area2D" parent="Dice3"]
script = ExtResource("8_52i40")

[node name="CollisionShape2DDice3" type="CollisionShape2D" parent="Dice3/Area2DDice3"]
position = Vector2(-0.410233, -0.238892)
shape = SubResource("RectangleShape2D_kctvb")

[node name="Dice4" type="Sprite2D" parent="."]
visible = false
position = Vector2(342, 218)
rotation = 0.362893
texture = ExtResource("9_0lvw8")

[node name="Area2DDice4" type="Area2D" parent="Dice4"]
script = ExtResource("10_kctvb")

[node name="CollisionShape2DDice4" type="CollisionShape2D" parent="Dice4/Area2DDice4"]
position = Vector2(-0.302124, -0.999954)
shape = SubResource("RectangleShape2D_0lvw8")

[node name="Dice5" type="Sprite2D" parent="."]
visible = false
position = Vector2(397, 115)
rotation = -0.370103
texture = ExtResource("6_t106f")

[node name="Area2DDice5" type="Area2D" parent="Dice5"]
script = ExtResource("12_0lvw8")

[node name="CollisionShape2DDice5" type="CollisionShape2D" parent="Dice5/Area2DDice5"]
position = Vector2(-4.23193e-06, -1.4782e-05)
shape = SubResource("RectangleShape2D_3n6wd")

[node name="Dice6" type="Sprite2D" parent="."]
visible = false
position = Vector2(464, 219)
rotation = 0.599391
texture = ExtResource("11_3n6wd")

[node name="Area2DDice6" type="Area2D" parent="Dice6"]
script = ExtResource("14_3n6wd")

[node name="CollisionShape2DDice6" type="CollisionShape2D" parent="Dice6/Area2DDice6"]
position = Vector2(-0.094635, -0.479294)
shape = SubResource("RectangleShape2D_rk1eq")

[node name="ShakeDiceCupAnimation" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="ShakeDiceCupAnimation"]
position = Vector2(330, 310)
rotation = -4.71239
scale = Vector2(0.335, 0.335)
texture = ExtResource("8_u51ea")

[node name="ShakeDiceCup" type="AnimationPlayer" parent="ShakeDiceCupAnimation/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_iar8x")
}
autoplay = "AgitarCubilete"

[node name="PickUpDiceAnimation" type="Node2D" parent="."]
visible = false
position = Vector2(330, 310)
rotation = 1.5708
scale = Vector2(0.335, 0.335)

[node name="Sprite2D" type="Sprite2D" parent="PickUpDiceAnimation"]
position = Vector2(-304.479, -286.566)
scale = Vector2(1.20337, 1.18554)
texture = ExtResource("15_1m5i2")

[node name="PickUpDice" type="AnimationPlayer" parent="PickUpDiceAnimation/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_j3px3")
}
autoplay = "recoger_dados"

[connection signal="mouse_entered" from="Dice1/Area2DDice1" to="Dice1/Area2DDice1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Dice1/Area2DDice1" to="Dice1/Area2DDice1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Dice2/Area2DDice2" to="Dice2/Area2DDice2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Dice2/Area2DDice2" to="Dice2/Area2DDice2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Dice3/Area2DDice3" to="Dice3/Area2DDice3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Dice3/Area2DDice3" to="Dice3/Area2DDice3" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Dice4/Area2DDice4" to="Dice4/Area2DDice4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Dice4/Area2DDice4" to="Dice4/Area2DDice4" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Dice5/Area2DDice5" to="Dice5/Area2DDice5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Dice5/Area2DDice5" to="Dice5/Area2DDice5" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Dice6/Area2DDice6" to="Dice6/Area2DDice6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Dice6/Area2DDice6" to="Dice6/Area2DDice6" method="_on_mouse_exited"]
